# quantized-pathfinding

./: .gitignore  Cargo.toml  README.md  TODO
.config/: gitlab-ci.yml
.github/workflows/: mirror.yml
examples/: q_astar2d.rs  q_astar2d_simple.rs
examples/helpers/: mod.rs
src/: lib.rs
src/directed/: mod.rs  quantized_astar.rs
src/traits/: mod.rs
src/utils/: mod.rs  quantizer.rs  quantizer_2d.rs  quantizer_3d.rs  quantizer_inquisitive.rs
tests/: unit_quantizer.rs  unit_quantizer_2d.rs  unit_quantizer_3d.rs  unit_traits.rs
tests/common/: mock_quantizer.rs  mod.rs  pseudo_float.rs
